docs/v8/en/webpublisher/publishing-of-content/README.md
-   [Start the WebPublisher](#start-the-webpublisher)
    -   [Create a New Publication](#create-a-new-publication)
    -   [Update an Existing Publication](#update-an-existing-publication)
    -   [Delete an Existing Publication](#delete-an-existing-publication)
    -   [Import](#import)
-   [Configure the Web Publication](#configure-the-web-publication)



![](//images.ctfassets.net/utx1h0gfm1om/4v6LUdXj7GYcU6S6qsCSu0/1f6f1c37b61e91f62e8f394b3cd0a346/328844.png)


### Start the WebPublisher

-   from the tab of process4.biz in the Visio menu, under "Extensions"
-   via the context menu of a unit in the repository

The following functions are available for the Web publication:

#### **Create a New Publication**

This feature allows either a new website or a new model for an existing
site to be created.

#### **Update an Existing Publication**

This option allows you to update an already published website or change
the existing settings for the publication: [update
publication](updating-a-publication) .

#### **Delete an Existing Publication**

This option allows you to delete content publications as well as the
publication models and the website: [delete
publication](deleting-a-publication)

<div class="info">
  <h3>Info</h3>
  Do not forget update the page (F5) when new publication created or existing updated to be sure the site is up-to-date. 
  </div>

#### **Import**

As of release 5.4.0, sets are used for Web publications in WebPublisher.
If you want to import Web publications that have been published with a
release that is older than 5.4.0, click this button and select the file
"&lt;site&gt; /models/config.xml", which contains the data of the
published models. Old publications can then be converted into sets and
used with the current WebPublisher.

 


<hr style="padding-top:2rem" />
<a href="https://github.com/process4/docs/issues" target="_blank" class="bgw btn btn-primary btn-lg shadow-sm">Report an issue</a>
<a href="https://github.com/process4/docs" target="_blank" class="bgw btn btn-primary btn-lg shadow-sm" style="margin-left:10px;">View source code</a>